# reliable-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
evals/: run_evals.py  tasks.jsonl
examples/: research_agent.py
src/reliable_agent/: __init__.py  __main__.py  agent.py  config.py  reliability.py  tools.py  tracing.py
src/reliable_agent/backends/: base.py  claude.py  cohere.py  fake.py
tests/: test_agent_fake.py  test_reliability.py
